支付 待实现

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "pages/cart/cart",
     "pages/collect/collect",
     "pages/order/order",
-    "pages/Search/Search",
+    "pages/search/search",
     "pages/user/user",
     "pages/feedback/feedback",
     "pages/login/login",
