替换了没有图片的图片的图片 给没有商品图片的商品页面添加默认轮播图 添加用户足迹计算功能 用户支付成功将清除购物车 基础库升级为20.0.0

--- a/project.config.json
+++ b/project.config.json
@@ -35,10 +35,13 @@
     "packNpmManually": false,
     "packNpmRelationList": [],
     "minifyWXSS": true,
-    "showES6CompileOption": false
+    "disableUseStrict": false,
+    "minifyWXML": true,
+    "showES6CompileOption": false,
+    "useCompilerPlugins": false
   },
   "compileType": "miniprogram",
-  "libVersion": "2.19.2",
+  "libVersion": "2.20.0",
   "appid": "wx150c3eb769faa435",
   "projectname": "test002",
   "debugOptions": {
